--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Tiro+Devanagari+Hindi&display=swap');
+*{
+    box-sizing: border-box;
+}
 .header{
     margin: 0 auto;
     width: 100%;
-    height: 100px;
+    height: 80px;
     text-align: center;
-    background-color: rgb(75, 68, 68);
-    padding-bottom: 20px;
-    
-    }
+    background-color: rgb(43, 37, 37);
+
+   }
     .log1{
         width: 50px;
         height: 50px;
@@ -32,7 +34,7 @@
         justify-content: space-between;
         align-items: center;
        margin: 0 30px ;
-       padding-bottom: 25px;
+     
        }
     .headerl{
         display: flex;
@@ -41,10 +43,9 @@
         align-items: center;
       
     }
-    .headerr>a{
+    .Contact-btn{
        background-color:lightseagreen ;
-      
-       padding: 20px;
+      padding: 10px;
     }
     a{
         text-decoration: none;
@@ -81,31 +82,29 @@
     display: flex;
     /*justify-content: space-around;*/
     align-items: center;
-    background-color: rgb(90, 82, 82);
-    justify-content: center;
-   
-    padding: 20px;
-
+    background-color: rgb(34, 30, 30);
+  
 }
-/*.class1{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgb(63, 56, 56);
-    
-    
-}*/
+#img1{
+    margin-left: 80px;
+}
+
 .button{
     margin-left: 150px;
     border: none;
     padding: 10px;
 }
-.class1 > h3{
-    margin-left: 30px;
-    font-size: x-large;
+.class1 {
+    
+}
+.class1 > h1{
+    margin-left: 100px;
+    font-size: 50px;
     font-weight: bold;
     color: rgb(29, 202, 159);
-    padding-bottom: 30px;
+    padding: 0;
+    
+    font-family: 'Open Sans', sans-serif;
     
 }
  p{
@@ -120,9 +119,14 @@
 }
 
 .class1 > h2{
-    margin-left: 30px;
-    font-size: x-large;
-    font-weight: bold;
-    color: rgb(122, 179, 164);
-    padding-bottom: 30px;
+    margin-left: 70px;
+    font-size: 60px;
+    
+    color: rgb(227, 240, 236);
+   
+    font-family: 'Open Sans', sans-serif;
+    
+}
+#devlop{
+
 }
