--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Tiro+Devanagari+Hindi&display=swap');
 *{
     box-sizing: border-box;
+    margin: 0;padding: 0;
 }
 .header{
     margin: 0 auto;
@@ -10,15 +11,29 @@
     background-color: rgb(43, 37, 37);
 
    }
+    .container{
+    max-width: 1940px;  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   margin: 0 30px ;
+    } 
+    .headerl{
+        display: flex;
+        flex: 1;
+        
+        align-items: center;
+      
+    }
     .log1{
         width: 50px;
         height: 50px;
         background-color: lightseagreen;
         border-radius: 50px;
         position: relative;
-    
-    }
-    .log2{
+        }
+
+.log2{
         width: 25px ;
     height: 25px;
     background-color: rgb(22,22,22);
@@ -28,105 +43,170 @@
     top: 25%;
     left: 25%;
     }
-    .container{
-       /* max-width: 1940px;  */
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-       margin: 0 30px ;
-     
-       }
-    .headerl{
-        display: flex;
-        flex: 1;
-        
-        align-items: center;
-      
-    }
-    .Contact-btn{
-       background-color:lightseagreen ;
-      padding: 10px;
-    }
+    
+    
     a{
         text-decoration: none;
         padding: 20px;
         color: white;
     }
+    .class1 > h3{
+        margin-left: 70px;
+        font-size: 50px;
+        font-weight: bold;
+        color: rgb(29, 202, 159);
+        padding: 0;
+        
+        font-family: 'Open Sans', sans-serif;
+        
+    }
+     p{
+        margin-left: 50px;
+        font-size: large;
+        font-weight: lighter;
+        color: white;
+        word-spacing: 1px;
+        justify-content: center;
+        line-height: 40px;
+        text-align: ce;
+    }
     
- main{
-    background-color: rgb(53, 47, 47);
-    font-display: white;
-}
-  
-.head>img{
+    .class1 > h2{
+        margin-left: 70px;
+        font-size: 50px;
+        
+        color: rgb(227, 240, 236);
+       
+        font-family: 'Open Sans', sans-serif;
+         }
+    .head>img{
     position: relative;
-    left:80px;
 }
 .photo{
     margin:0px auto;
-    
-}
-.flex{
-    display:flex;  
-    justify-content: Centre ;
-    text-item: center;
-    
-    
-}
-.section12{
-    padding: auto;
-    margin: auto;
+    }
 
-}
 .section1{
     display: flex;
     /*justify-content: space-around;*/
     align-items: center;
     background-color: rgb(34, 30, 30);
+    height: 38rem;
   
 }
+.Contact-btn{
+    background-color:lightseagreen ;
+   padding: 10px;
+   margin-left: 150px;
+ }
 #img1{
     margin-left: 80px;
+    border-radius: 50px;
+    
 }
 
 .button{
-    margin-left: 150px;
-    border: none;
+    margin-left: 180px;
+    border-color: rgb(17, 185, 236);
     padding: 10px;
-}
-.class1 {
-    
-}
-.class1 > h1{
-    margin-left: 100px;
-    font-size: 50px;
-    font-weight: bold;
-    color: rgb(29, 202, 159);
-    padding: 0;
-    
-    font-family: 'Open Sans', sans-serif;
-    
-}
- p{
-    margin-left: 50px;
-    font-size: large;
-    font-weight: lighter;
-    color: white;
-    word-spacing: 1px;
-    justify-content: center;
-    line-height: 40px;
-    text-align: ce;
+    border-width: 4px;
+    font-size: x-large;
+    color: rgb(208, 208, 224);
+    border-style: solid;
+    background-color: rgb(27, 24, 24);
+    margin-bottom: 10px;
+
 }
 
-.class1 > h2{
-    margin-left: 70px;
-    font-size: 60px;
-    
-    color: rgb(227, 240, 236);
-   
-    font-family: 'Open Sans', sans-serif;
-    
-}
 #devlop{
+color: aquamarine;
+}
+/* section2................................................................................................... */
+.about{
+    
+}
+.abt{
+ display: flex;
+ margin-top:15px;
+ margin-right: 50px;
+ /* justify-content: space-between; */
+ /* justify-content: center; */
+ display: inline-flex;
+ margin-left: 180px;
+}
+
+
+#ram{
+    width: 300px;
+    height: 350px;
+    margin-top: 40px;
+    margin-right: 80px;
+    
+}
+.abt-me{
+    margin-top: 50px;
+    /* margin-right: 250px; */
+    font-family: 'Open Sans', sans-serif;
+    color: brown;
+    margin-left: 70px;
 
 }
+.phone{
+    margin-top: 20px;
+}
+/* <!-- section3.......................................................................section3 --> */
+.our-service{
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 10px;
+    
+    
+}
+.flexbox{
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    margin-left: 180px;
+    justify-content:space-between;
+    width: 80%;
+    position: relative;
+   
+   }
+p{
+    color: black;
+}
+.card {
+    background-color: whitesmoke;
+    font-family: 'Open Sans', sans-serif;
+}
+.cardd{
+    background-color: rgb(241, 225, 225);
+    margin-top: 10px;
+    font-family: 'Open Sans', sans-serif;
+}
+.hed{
+    font-family: 'Open Sans', sans-serif;
+    color: aqua;
+}
+span{
+    color: black;
+}
+/* <!-- section4.......................................................................section4 --> */
+.sect4{
+    color: rgb(231, 242, 245);
+    
+}
+.row{
+    position: relative;
+    
+}
+    
+#sec{
+    clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 100%, 80% 89%, 0 100%, 0% 20%);
+    width: 100%;
+    height: 400px;
+    }
+    .sectt1{
+         top: 10px; ;
+    }
+    
