--- a/style.css
+++ b/style.css
@@ -44,7 +44,10 @@
     left: 25%;
     }
     
-    
+    .article p{
+        color: white;
+    }
+
     a{
         text-decoration: none;
         padding: 20px;
@@ -64,7 +67,7 @@
         margin-left: 50px;
         font-size: large;
         font-weight: lighter;
-        color: white;
+        color: rgb(216, 31, 31);
         word-spacing: 1px;
         justify-content: center;
         line-height: 40px;
@@ -75,9 +78,12 @@
         margin-left: 70px;
         font-size: 50px;
         
-        color: rgb(227, 240, 236);
+        color: rgb(231, 235, 234);
        
         font-family: 'Open Sans', sans-serif;
+         }
+         #dev{
+             color: rgb(26, 186, 207);
          }
     .head>img{
     position: relative;
@@ -107,15 +113,14 @@
 
 .button{
     margin-left: 180px;
-    border-color: rgb(17, 185, 236);
+    border-color: rgb(17, 236, 145);
     padding: 10px;
-    border-width: 4px;
+    border-width: 3px;
     font-size: x-large;
     color: rgb(208, 208, 224);
     border-style: solid;
     background-color: rgb(27, 24, 24);
-    margin-bottom: 10px;
-
+    margin-top: 20px;
 }
 
 #devlop{
@@ -194,19 +199,71 @@ span{
 /* <!-- section4.......................................................................section4 --> */
 .sect4{
     color: rgb(231, 242, 245);
-    
+    background-image:url(https://cdn.pixabay.com/photo/2021/02/15/18/44/shiva-6018805_960_720.jpg );
+    height: 500px;
+    clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 100%, 80% 89%, 0 100%, 0% 20%);
 }
 .row{
-    position: relative;
-    
-}
-    
+    text-align: center;
+    font-family:'Open Sans', sans-serif ;
+  
+    }
+      
 #sec{
-    clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 100%, 80% 89%, 0 100%, 0% 20%);
+    
     width: 100%;
     height: 400px;
     }
-    .sectt1{
-         top: 10px; ;
+    .sect12{
+        color: white;
+        font-size: x-large;
     }
+.sect3{
+    margin-left: 180px;
+    border: none;
+    padding: 10px;
+   margin-top: 20px;
+    font-size: large;
+    color: rgb(25, 25, 27);
     
+    background-color: rgb(53, 162, 189);
+    margin-bottom: 10px;
+}
+    
+    .sect2{
+     margin-top: 200px;
+     color: white;
+     font-size: xx-large;
+     
+    }
+    /* <!-- section5.......................................................................section5 --> */
+    .sect6{
+        text-align: center;
+        color: rgb(17, 100, 100);
+        font-family:'Open Sans', sans-serif ;
+    }
+    .sect5{
+        text-align: center;
+        color: rgb(49, 43, 34);
+    }
+    #lady{
+        margin-left: 45%;
+    }
+    /* <!-- section6.......................................................................section6 --> */
+    .work{
+        margin-top: 5%;
+        text-align: center;
+        color: aqua;
+        font-family:'Open Sans', sans-serif ;
+    }
+    .work1{
+        text-align: center;
+        font-family:'Open Sans', sans-serif ;
+        color: brown;
+    }
+    .photo6{
+        margin-left: 15%;
+        margin-top: 30px;
+     justify-content: center;
+    }
+     /* <!-- section7.......................................................................section7--> */
